# web_test

./: README.md  contact.html  main.py  main_shool.py  pyproject.toml  starter.url
storage/: db.json
templates/: blog.html
