[tool.poetry]
name = "web-test"
version = "0.1.0"
description = ""
authors = ["AnybodyKnows <evgeniiolavrik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
